--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,8 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+
+        buildConfigField "boolean", "LOGGER_ENABLED", "true"
     }
 
     buildTypes {
@@ -40,6 +42,8 @@ android {
             minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             manifestPlaceholders = [crashlyticsCollectionEnabled: "true"]
+
+            buildConfigField "boolean", "LOGGER_ENABLED", "false"
         }
     }
     packagingOptions {
