Add sms sending implementation

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
 
     // region security
     implementation libs.bundles.androidx.security
+    implementation libs.permissions.warder
     // endregion
 
     // region presentation
