--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -77,6 +77,8 @@ okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor" }
 moshi-kotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshi" }
 moshi-adapters = { module = "com.squareup.moshi:moshi-adapters", version.ref = "moshi" }
 moshi-compiler = "dev.zacsweers.moshix:moshi-ksp:0.14.1"
+# store
+androidx-datastore = "androidx.datastore:datastore-preferences:1.0.0"
 # security
 # Keep alpha01 till the issue is solved https://issuetracker.google.com/issues/164901843
 androidx-security-crypto = "androidx.security:security-crypto:1.1.0-alpha01"
