--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ buildscript {
         classpath "org.jlleitschuh.gradle:ktlint-gradle:10.2.1"
         classpath "gradle.plugin.org.ec4j.gradle:editorconfig-gradle-plugin:0.0.3"
         classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.google.firebase:firebase-appdistribution-gradle:3.0.1'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.8.1'
         classpath 'com.google.firebase:perf-plugin:1.4.1'
         classpath "com.github.ben-manes:gradle-versions-plugin:0.42.0"
