--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="ua.sprotyv.smsbroadcaster"
+    package="rip.zarmy.smsbroadcaster"
     >
 
     <uses-permission android:name="android.permission.SEND_SMS" />
